--- a/ServerHost/ServerHost.csproj
+++ b/ServerHost/ServerHost.csproj
@@ -13,6 +13,8 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,7 +36,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Images\Icons\ICO\mail.ico</ApplicationIcon>
+    <ApplicationIcon>Images\Icons\ICO\icon_logo.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Hardcodet.Wpf.TaskbarNotification, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
@@ -48,9 +50,22 @@
       <HintPath>..\packages\MaterialDesignThemes.2.3.2-ci1021\lib\net45\MaterialDesignThemes.Wpf.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.Windows.Shell, Version=3.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Windows.Shell.3.0.1.0\lib\net40\Microsoft.Windows.Shell.dll</HintPath>
+    </Reference>
+    <Reference Include="PropertyChanged, Version=1.0.0.0, Culture=neutral, PublicKeyToken=ee3ee20bcf148ddd, processorArchitecture=MSIL">
+      <HintPath>..\packages\PropertyChanged.Fody.2.2.5\lib\netstandard1.0\PropertyChanged.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.InteropServices.RuntimeInformation, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.InteropServices.RuntimeInformation.4.3.0\lib\net45\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
+    </Reference>
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -69,18 +84,67 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DataModels\ApplicationServicePage.cs" />
+    <Compile Include="DataModels\ApplicationPage.cs" />
     <Compile Include="Logs.cs" />
-    <Compile Include="UserControls\LoadView.xaml.cs">
+    <Compile Include="ValueConverters\ApplicationServicesPageValueConverter.cs" />
+    <Compile Include="ValueConverters\ColorTypeLogValueConverter.cs" />
+    <Compile Include="ViewModel\LogClass\LogListViewModel.cs" />
+    <Compile Include="ViewModel\LogClass\LogListItemViewModel.cs" />
+    <Compile Include="ViewModel\RNCBServiceViewModel.cs" />
+    <Compile Include="ViewModel\SettingsSendBidsViewModel.cs" />
+    <Compile Include="Views\Pages\DashboardPage.xaml.cs">
+      <DependentUpon>DashboardPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Pages\GeneralSettingsPage.xaml.cs">
+      <DependentUpon>GeneralSettingsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Pages\LogsPage.xaml.cs">
+      <DependentUpon>LogsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Pages\MailSettingsPage.xaml.cs">
+      <DependentUpon>MailSettingsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Pages\ServicesSettingsPage.xaml.cs">
+      <DependentUpon>ServicesSettingsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Pages\SettingsPage.xaml.cs">
+      <DependentUpon>SettingsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserControls\CustomTrayPopup.xaml.cs">
+      <DependentUpon>CustomTrayPopup.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserControls\CustomTrayToolTip.xaml.cs">
+      <DependentUpon>CustomTrayToolTip.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserControls\LoadView.xaml.cs">
       <DependentUpon>LoadView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\UserControls\LogListControl.xaml.cs">
+      <DependentUpon>LogListControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserControls\LogListItemControl.xaml.cs">
+      <DependentUpon>LogListItemControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserControls\Services.xaml.cs">
+      <DependentUpon>Services.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ValueConverters\ApplicationPageValueConverter.cs" />
     <Compile Include="ValueConverters\BaseValueConverter.cs" />
     <Compile Include="ValueConverters\StateServiceIconConverter.cs" />
-    <Compile Include="ViewModel\Base\AnotherCommandImplementation.cs" />
     <Compile Include="ViewModel\Base\BaseViewModel.cs" />
     <Compile Include="ViewModel\Base\NotifyPropertyChangedExtension.cs" />
     <Compile Include="ViewModel\Base\RelayCommand.cs" />
+    <Compile Include="ViewModel\CustomTrayToolTipViewModel.cs" />
     <Compile Include="ViewModel\DialogViewModel.cs" />
+    <Compile Include="ViewModel\LogClass\LogsViewModel.cs" />
+    <Compile Include="ViewModel\ServicesViewModel.cs" />
+    <Compile Include="ViewModel\SettingsViewModel.cs" />
     <Compile Include="ViewModel\WindowViewModel.cs" />
+    <Compile Include="Views\Windows\SettingsSendBidsServiceWindow.xaml.cs">
+      <DependentUpon>SettingsSendBidsServiceWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Window\WindowResizer.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -93,7 +157,75 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="UserControls\LoadView.xaml">
+    <Page Include="Views\Pages\DashboardPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Pages\GeneralSettingsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Pages\LogsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Pages\MailSettingsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Pages\ServicesSettingsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Pages\SettingsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Styles\PackIcons.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Styles\Buttons.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Styles\Colors.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Styles\Fonts.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Styles\Texts.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\UserControls\CustomTrayPopup.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserControls\CustomTrayToolTip.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserControls\LoadView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserControls\LogListControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserControls\LogListItemControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserControls\Services.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Windows\SettingsSendBidsServiceWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -116,6 +248,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -134,54 +267,39 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\Icons\ICO\mail.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\Icons\PNG\Backup-IBM-Server-icon.png" />
-    <Resource Include="Images\Icons\PNG\Home-Server-icon.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\Icons\PNG\calc3.png" />
-    <Resource Include="Images\Icons\PNG\Control Panel.png" />
-    <Resource Include="Images\Icons\PNG\document.png" />
-    <Resource Include="Images\Icons\PNG\notes 1.png" />
-    <Resource Include="Images\Icons\PNG\system hd.png" />
-    <Resource Include="Images\Icons\PNG\system usb.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\ui-dark-header.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\Icons\ICO\Control Panel.ico" />
-    <Resource Include="Images\Icons\ICO\system hd.ico" />
-    <Resource Include="Images\Icons\ICO\system usb.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\Logo\server-logo.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\Png\6611.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\wallpaper001.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\6452.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\Logo\Сервер.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\Logo\Сервер 3.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\Сервер 2.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Сервер 3.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="FodyWeavers.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Logo\CentralMonitoring.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Logo\icon logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Icons\ICO\icon_logo.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Icons\ICO\computer.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Images\Png\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\Fody.2.3.20\build\Fody.targets" Condition="Exists('..\packages\Fody.2.3.20\build\Fody.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>Данный проект ссылается на пакеты NuGet, отсутствующие на этом компьютере. Используйте восстановление пакетов NuGet, чтобы скачать их.  Дополнительную информацию см. по адресу: http://go.microsoft.com/fwlink/?LinkID=322105. Отсутствует следующий файл: {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Fody.2.3.20\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.2.3.20\build\Fody.targets'))" />
+    <Error Condition="!Exists('..\packages\NETStandard.Library.2.0.1\build\NETStandard.Library.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NETStandard.Library.2.0.1\build\NETStandard.Library.targets'))" />
+  </Target>
+  <Import Project="..\packages\NETStandard.Library.2.0.1\build\NETStandard.Library.targets" Condition="Exists('..\packages\NETStandard.Library.2.0.1\build\NETStandard.Library.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
