--- a/ServerWork/ServerWork.csproj
+++ b/ServerWork/ServerWork.csproj
@@ -31,8 +31,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GemBox.Spreadsheet">
+      <HintPath>..\..\..\..\Programms\Программирование\Gembox.Spreadsheet 3.9\GemBox.Spreadsheet.dll</HintPath>
+    </Reference>
     <Reference Include="Hardcodet.Wpf.TaskbarNotification, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Hardcodet.NotifyIcon.Wpf.1.0.8\lib\net45\Hardcodet.Wpf.TaskbarNotification.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Npgsql, Version=2.2.3.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\2019\DatabaseCore\DatabaseCore\bin\Debug\Npgsql.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,14 +55,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BidService\Services\ServiceMail.cs" />
+    <Compile Include="BidService\Services\Services.cs" />
+    <Compile Include="BidService\Services\ServiceSendTimes.cs" />
+    <Compile Include="BidService\TehBids.cs" />
+    <Compile Include="BidService\TehBidsWork.cs" />
+    <Compile Include="ExportToExcel\ExportToExcel.cs" />
+    <Compile Include="ExportToJson\ExportToJson.cs" />
     <Compile Include="IServerService.cs" />
+    <Compile Include="Logger\LogManager.cs" />
+    <Compile Include="Logger\LogType.cs" />
+    <Compile Include="ProblemDevicesRNCB\ProblemDevice.cs" />
+    <Compile Include="ProblemDevicesRNCB\ProblemDevicesRNCBWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendMail\SendMail.cs" />
+    <Compile Include="SendMail\SendMailInfo.cs" />
     <Compile Include="ServerService.cs" />
+    <Compile Include="WorkDB\INI\INI.cs" />
+    <Compile Include="WorkDB\WorkDB.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
